[package]
name = "rust_api_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "winver", "errhandlingapi", "memoryapi"] }
ntapi = "0.4.1"
chrono = "0.4.38"
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_Kernel"] }
noldr = { git = "https://github.com/Teach2Breach/noldr.git", branch = "main" }